--- a/src/main/resources/templates/detalhes.html
+++ b/src/main/resources/templates/detalhes.html
@@ -91,6 +91,8 @@
     </div>
   </div>
 
+  <footer th:insert="footer.html :: footer" class="rodape" style="margin-top:150px;"></footer>
+
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
