--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -134,7 +134,7 @@
   </div>
 
     <!-- Carrossel de Filmes -->
-  <div id="slider" class="carousel slide slider" data-bs-ride="false">
+  <div id="slider" class="carousel slide slider" data-bs-ride="false" th:if="${moviesChunks != null and #lists.size(moviesChunks) > 0}">
     <div class="carousel-inner">
       <!-- Itera sobre os chunks de filmes -->
       <div th:each="movieChunk, iterStat : ${moviesChunks}" class="carousel-item" th:classappend="${iterStat.index == 0} ? 'active'">
