--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -109,47 +109,26 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <script>
-        const serverUrl = 'http://localhost:443';
+        const serverUrl = '';
 
-        function setAuthHeader() {
-               var token = localStorage.getItem('access_token');
-               if (token) {
-                   $.ajaxSetup({
-                       headers: {
-                           'Authorization': 'Bearer ' + token
-                       }
-                   });
-               }
-           }
-       function makeAuthenticatedRequest() {
-            var token = localStorage.getItem('access_token');
-            if (token) {
-                $.ajax({
-                    url: `${serverUrl}`,
+    $(document).ready(function() {
+       $.ajax({
+                    url: `/api/config`,
                     type: 'GET',
-                    headers: {
-                        'Authorization': 'Bearer ' + token
-                    },
                     success: function(response) {
-                        // Processa a resposta
+                      // alert(response);
+                       serverUrl = response;
                     },
                     error: function(xhr, status, error) {
                         // Processa o erro
                     }
                 });
-            } else {
-                alert('Usuário não está autenticado.');
-            }
-        }
-    $(document).ready(function() {
+
         $('#login-form').on('submit', function(e) {
             e.preventDefault(); // Evita o comportamento padrão de submit
-
             // Obtém os dados do formulário
             var email = $('input[name="login"]').val();
-            console.log(email)
             var password = $('input[name="password"]').val();
-            console.log(password)
             // Envia os dados via AJAX
             $.ajax({
                 url:  `${serverUrl}/api/v1/auth/login`,
@@ -162,7 +141,7 @@
                 success: function(response) {
                     // Sucesso no login
                    // localStorage.setItem('access_token', response.token);
-                    setAuthHeader();
+                   // setAuthHeader();
                     alert('Login bem-sucedido!');
                     // Redirecionar ou processar resposta
                     window.location.href = '/';
@@ -174,7 +153,9 @@
                 }
             });
         });
-    });
+        });
+        
+
 
     </script>
 </body>
