´[ADD] Html template to register new users

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -102,7 +102,7 @@
             </form>
             <a href="#" class="forgot-password">Forgot password?</a>
             <div class="signup-link">
-                <p>New to Disney+? <a href="#">Sign up</a></p>
+                <p>New to Disney+? <a th:href="@{'/auth/register'}">Sign up</a></p>
             </div>
         </div>
     </div>
