--- a/src/main/resources/templates/detalhes.html
+++ b/src/main/resources/templates/detalhes.html
@@ -55,6 +55,8 @@
   .navbar-brand img {
     height: 40px;
   }
+
+
   </style>
 </head>
 <body>
@@ -67,9 +69,8 @@
         <div class="row">
           <div class="col-md-6">
             <h1 class="movie-title">[[${details.title}]]</h1>
-            <p class="movie-genre">
-              <span class="badge">[[${details.genre}]]</span>
-              <span class="badge">Família</span>
+            <p class="movie-genre" th:each="genre : ${genres}" style="display:inline-block">
+              <span class="badge" th:text="${genre}">Genre name</span>
             </p>
             <div class="movie-actions">
               <a th:href="@{'/play/'+ ${details.rid}}">
