--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -100,7 +100,7 @@
                 <input type="password" name="password" placeholder="Password" required>
                 <button type="submit">Log In</button>
             </form>
-            <a href="#" class="forgot-password">Forgot password?</a>
+            <a th:href="@{'/auth/reset'}" class="forgot-password">Forgot password?</a>
             <div class="signup-link">
                 <p>New to Disney+? <a th:href="@{'/auth/register'}">Sign up</a></p>
             </div>
