[FIX] Route to login template on updatePassword html fixed

--- a/src/main/resources/templates/updatePassword.html
+++ b/src/main/resources/templates/updatePassword.html
@@ -99,7 +99,7 @@
       </form>
     </div>
     <div class="card-footer">
-      <a href="#" class="footer-link">Back to Login</a>
+      <a th:href="@{'/auth/login'}" class="footer-link">Back to Login</a>
     </div>
   </div>
 </div>
