--- a/src/main/resources/templates/reset.html
+++ b/src/main/resources/templates/reset.html
@@ -101,5 +101,31 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    document.querySelector('form').addEventListener('submit', function(event) {
+        event.preventDefault(); // Impede o envio do formulário de forma tradicional
+
+        const email = document.querySelector('#email').value;
+
+        fetch('http://ismael221.ddns.net:443/api/v1/email/send-reset-email?email=' + encodeURIComponent(email), {
+            method: 'POST',
+        })
+        .then(response => {
+            if (response.ok) {
+                return response.json(); // Tenta interpretar a resposta como JSON
+            } else {
+                return response.text(); // Se não for JSON, trata como texto
+            }
+        })
+        .then(data => {
+            alert(typeof data === 'string' ? data : data.message);
+        })
+        .catch(error => {
+            console.error('Error:', error);
+            alert('Failed to send email');
+        });
+    });
+</script>
+
 </body>
 </html>
