[FIX] Sending the access token located on the local storage on each .ts file request

--- a/src/main/resources/templates/assistir.html
+++ b/src/main/resources/templates/assistir.html
@@ -99,9 +99,8 @@
             class="video-js vjs-big-play-centered"
             controls
             preload="auto"
-            th:poster="@{${media.coverImgUrl}}"
-            data-setup="{}">
-        <source th:src="${config + '/api/v1/media/hls/' + media.rid + '.m3u8'}" type="application/x-mpegURL" />
+            th:poster="@{${media.coverImgUrl}}">
+        <source th:src="${config + '/api/v1/media/hls/' + media.rid + '.m3u8'}" type="application/x-mpegURL"  />
         <p class="vjs-no-js">
             To view this video please enable JavaScript, and consider upgrading to a
             web browser that
@@ -111,19 +110,34 @@
 </div>
 
 <!-- Video.js JavaScript -->
-<script src="https://vjs.zencdn.net/7.18.1/video.min.js"></script>
+<script src="https://vjs.zencdn.net/8.16.1/video.min.js"></script>
 <!-- Video.js HLS Plugin (VHS) -->
-<script src="https://vjs.zencdn.net/7.18.1/videojs-http-streaming.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@videojs/http-streaming@3.10.0/+esm"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function() {
     // Inicializando o Video.js
     var player = videojs('my-video');
+
+     // Adiciona middleware para customizar requisições HLS e adicionar o Bearer Token
+    videojs.Vhs.xhr.beforeRequest = function (options) {
+        // Adiciona o Bearer token ao cabeçalho Authorization
+        options.headers = options.headers || {};
+        options.headers.Authorization = 'Bearer ' + localStorage.getItem('access_token');
+
+        return options;
+    };
+
+    player.ready(function () {
+        // Reproduz o vídeo quando o player estiver pronto
+        player.play();
+    });
 
     // Exemplo de ação para o botão de voltar
     document.querySelector('.back-button').addEventListener('click', function(event) {
         event.preventDefault();
         window.history.back(); // Navega para a página anterior
     });
+
 });
 
 </script>
