--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -140,7 +140,7 @@
                 }),
                 success: function(response) {
                     // Sucesso no login
-                   // localStorage.setItem('access_token', response.token);
+                   localStorage.setItem('access_token', response.token);
                    // setAuthHeader();
                     alert('Login bem-sucedido!');
                     // Redirecionar ou processar resposta
