--- a/src/main/resources/templates/updatePassword.html
+++ b/src/main/resources/templates/updatePassword.html
@@ -84,7 +84,9 @@
     </div>
     <div class="card-body">
       <p class="text-center">Please enter your new password below. Make sure it is strong and secure.</p>
-      <form>
+      <form id="updatePasswordForm">
+        <div class="mb-3">
+          <input type="hidden" class="form-control" id="email"  th:value="${email}" required>
         <div class="mb-3">
           <label for="newPassword" class="form-label">New Password</label>
           <input type="password" class="form-control" id="newPassword" placeholder="Enter your new password" required>
@@ -105,5 +107,44 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script th:src="@{/js/jquery-3.7.1.js}"></script>
+<script>
+    $(document).ready(function () {
+    $('#updatePasswordForm').on('submit', function (e) {
+    e.preventDefault();
+
+    // Captura os valores do formulário
+    var email = $('#email').val();
+    var newPassword = $('#newPassword').val();
+    var confirmPassword = $('#confirmPassword').val();
+    var userRole = "USER";
+
+    if (newPassword !== confirmPassword) {
+    alert('Passwords do not match!');
+    return;
+    }
+
+    $.ajax({
+    url: '/api/v1/auth/update',
+    type: 'POST',
+    contentType: 'application/json',
+    data: JSON.stringify({
+    login: email,
+    password: newPassword,
+    role:userRole
+    }),
+    success: function (response) {
+
+    alert('Password updated successfully!');
+    window.location.href = '/auth/login'; // Redireciona para a página de login após a atualização
+    },
+    error: function (xhr, status, error) {
+    // Exibe uma mensagem de erro se a requisição falhar
+    alert('Failed to update password: ' + xhr.responseText);
+    }
+    });
+    });
+    });
+</script>
 </body>
 </html>
