--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -13,7 +13,7 @@
                     <a class="nav-link" th:href="@{/}">Início</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/listarFilmes}">Filmes</a>
+                    <a class="nav-link" th:href="@{/list}">Filmes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Séries</a>
