[FIX] Adding cache to m3u8 files and added some style to main cards on index

--- a/src/main/resources/templates/assistir.html
+++ b/src/main/resources/templates/assistir.html
@@ -102,8 +102,8 @@
 </head>
 <body>
 <div class="header">
-    <a th:href="@{'/detalhes/'+ ${media.rid}}" class="back-button"><i class="fas fa-arrow-left"></i></a>
-    <a class="media-title" th:href="@{'/detalhes/'+ ${media.rid}}"><span class="movie-title">[[${media.title}]]</span></a>
+    <a th:href="@{'/details/'+ ${media.rid}}" class="back-button"><i class="fas fa-arrow-left"></i></a>
+    <a class="media-title" th:href="@{'/details/'+ ${media.rid}}"><span class="movie-title">[[${media.title}]]</span></a>
 </div>
 <div class="video-container">
     <video id="my-video" controls preload="auto" autoplay th:poster="@{${media.coverImgUrl}}">
