--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,7 +39,7 @@
   .card img {
     height: 150px;
     object-fit: cover;
-    border-radius:5px
+    border-radius:5px;
     transition: transform 0.5s ease;
   }
   .card img:hover{
@@ -79,9 +79,10 @@
         border-radius: 5px;
       }
       .carousel-item img:hover {
+        outline: 3px solid #CCC;
+        border: 2px solid #333;
+        border-radius:5px;
         transform: scale(1.05);
-        border: 2px solid white;
-        border-radius: 5px;
       }
       .carousel {
         margin-top: 50px;
@@ -155,7 +156,7 @@
       <div th:each="movieChunk, iterStat : ${moviesChunks}" class="carousel-item" th:classappend="${iterStat.index == 0} ? 'active'">
         <div class="row">
           <!-- Itera sobre os filmes dentro de cada chunk -->
-          <div class="col" th:each="m : ${movieChunk}">
+          <div class="col" th:each="m : ${movieChunk}" style="padding:10px;">
             <a th:href="@{'/details/'+ ${m.rid}}">
               <img th:src="${m.coverImgUrl}" class="d-block w-100" th:alt="${m.title}">
             </a>
