[ADD] Adding the movies list template

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,9 +17,14 @@
   <meta property="og:image" content="URL-da-imagem-de-capa">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.seusite.com.br">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Manrope:wght@200..800&display=swap" rel="stylesheet">
 
   <style>
+    *{
+      font-family: "Manrope", sans-serif;
+}
     body {
     background-color: #1a1a1a;
     color: #fff;
