--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -7,54 +7,59 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="icon" href="https://static-assets.bamgrid.com/product/disneyplus/favicons/favicon-aurora.9c40657cf520f9cfcf49dbb4f316aa7c.ico" type="image/png">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Manrope:wght@200..800&display=swap" rel="stylesheet">
   <!-- Custom Styles -->
   <style>
-    body {
-      background-color: #1a1a1a;
-      color: #fff;
+    *{
+      font-family: "Manrope", sans-serif;
     }
-    .movie-background {
-      position: relative;
-      height: 100vh;
-      background-size: cover;
-      background-position: center;
-      //background-image: url('https://ingresso-a.akamaihd.net/b2b/production/uploads/article/image/2220/25acd5d2e3e9f7f4eb12c0bf102570b3.jpg'); /* Substitua pela URL da imagem do movie */
-    }
-    .movie-overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.7); /* Overlay escura */
-    }
-    .movie-content {
-      position: relative;
-      top: 50%;
-      transform: translateY(-50%);
-      padding: 20px;
-    }
-    .movie-title {
-      font-size: 2.5rem;
-      font-weight: bold;
-    }
-    .movie-actions {
-      margin-top: 20px;
-    }
-    .movie-description {
-      margin-top: 30px;
-    }
-    .badge {
-      background-color: #007bff;
-      margin-right: 5px;
-    }
-      .navbar {
-    background-color: #000;
-    }
-  .navbar-brand img {
-    height: 40px;
-  }
+body {
+  background-color: #1a1a1a;
+  color: #fff;
+}
+.movie-background {
+  position: relative;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  //background-image: url('https://ingresso-a.akamaihd.net/b2b/production/uploads/article/image/2220/25acd5d2e3e9f7f4eb12c0bf102570b3.jpg'); /* Substitua pela URL da imagem do movie */
+}
+.movie-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7); /* Overlay escura */
+}
+.movie-content {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 20px;
+}
+.movie-title {
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+.movie-actions {
+  margin-top: 20px;
+}
+.movie-description {
+  margin-top: 30px;
+}
+.badge {
+  background-color: #007bff;
+  margin-right: 5px;
+}
+  .navbar {
+background-color: #000;
+}
+.navbar-brand img {
+height: 40px;
+}
 
 
   </style>
