--- a/src/main/resources/templates/movies.html
+++ b/src/main/resources/templates/movies.html
@@ -16,7 +16,7 @@
         .movie-card {
             background-color: #1f1f1f;
             border: none;
-            transform 0.3s ease, border 0.5s ease;
+            transition: transform 0.5s ease;
         }
         .movie-card:hover{
            outline: 3px solid #CCC;
