[FIX] Fixed carrousel css

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,11 +39,13 @@
   }
   .main-carrousel{
    padding:30px;
+   margin-bottom:30px;
    }
   .main-carrousel img {
     height: 60vh;
     object-fit: cover;
     transition: transform 0.5s ease;
+    box-shadow: rgba(0, 0, 0, 0.69) 0px 26px 30px -10px, rgba(0, 0, 0, 0.73) 0px 16px 10px -10px;
   }
   .main-carrousel img:hover{
     outline: 4px solid #CCC;
@@ -70,7 +72,7 @@
     background-color: #333;
     border: none;
     border-radius:20px;
-    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    box-shadow: rgba(0, 0, 0, 0.69) 0px 26px 30px -10px, rgba(0, 0, 0, 0.73) 0px 16px 10px -10px;
   }
   .dropdown-menu {
     background-color: #333;
@@ -80,10 +82,6 @@
   }
   .dropdown-item:hover {
     background-color: #555;
-  }
-
-  #carouselExample{
-    margin-top:40px;
   }
   #slider{
     padding: 20px;
